unet/segmentation/slurm-745035.err-notch169
Traceback (most recent call last):
  File "/uufs/chpc.utah.edu/common/home/u0977428/ml_models/unet/segmentation/train.py", line 2, in <module>
    from config import config
  File "/uufs/chpc.utah.edu/common/home/u0977428/ml_models/unet/segmentation/config.py", line 9, in <module>
    from base.loss import PowerJaccardLoss
  File "/uufs/chpc.utah.edu/common/home/u0977428/ml_models/base/loss.py", line 64
    assert False "registering weights as a buffer"
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
